application properties update